--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <h1>3</h1>
+    <main>
+        <section id="tel">
+
+        </section>
+        <section id="soc">
+            
+        </section>
+    </main>
 </body>
 </html>
